Fixed css in articles and howTo to align images based on list length

--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -422,6 +422,7 @@ button:hover {
 }
 
 .inScrollable {
+  /* margin-top: -64px; */
   position: relative; /* Make the container a positioning context */
   width: 100%; /* Ensure the image container takes the full width of the scrollable div */
   height: 53vh;
@@ -437,7 +438,7 @@ button:hover {
   border-radius: 5px;
   height: 70vh;
   outline: 1px solid white;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
 }
 
 .no-cardpool {
@@ -446,7 +447,7 @@ button:hover {
   border: 2px solid rgb(68, 17, 206);
   border-radius: 5px;
   outline: 1px solid white;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
 }
 
 .maindeck {
@@ -3213,19 +3214,25 @@ button:hover {
 }
 
 .newsImageContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 1%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+  margin: 10px;
+}
+
+.newsImageContainer2 {
   margin: 10px;
 }
 
 .newsImage {
-  width: 300px;
+  max-height: 450px;
+  max-width: 100%;
   margin: 2.25px 0px;
   border-radius: 14px;
   overflow: hidden;
-  border: 1px solid white;
+  /* border: 1px solid white; */
+  align-self: center;
 }
 
 .ellipsis {
@@ -3353,6 +3360,19 @@ button:hover {
   margin-top: 10px;
   margin-bottom: 0px;
   padding: 0;
+}
+
+.media-h1-h2-box {
+  margin-top: -64px;
+}
+
+.flex-items-down-10-10 {
+  display: inline-block;
+  margin: 10px 0;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
+  width: auto;
 }
 
 @media screen and (max-width: 1330px) {
@@ -3831,6 +3851,7 @@ button:hover {
   }
 
   .inScrollable {
+    margin-top: auto;
     position: relative; /* Make the container a positioning context */
     width: 100%; /* Ensure the image container takes the full width of the scrollable div */
     height: auto;
@@ -3838,6 +3859,10 @@ button:hover {
     align-items: center;
     justify-content: center;
   }
+
+  /* .cardpool {
+    height: auto;
+  } */
 
   .cardpool2-ro {
     margin: 0;
@@ -3993,15 +4018,25 @@ button:hover {
   }
 
   .newsImageContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1%;
+    margin: 10px;
+  }
+
+  .newsImageContainer2 {
+    display: flex;
     justify-content: space-around;
   }
 
   .newsImage {
-    width: 300px;
+    max-height: 450px;
+    max-width: 100%;
     margin: 2.25px auto;
     border-radius: 14px;
     overflow: hidden;
-    border: 1px solid white;
+    /* border: 1px solid white; */
   }
 
   .media-hover-center {
@@ -4014,6 +4049,9 @@ button:hover {
     font-weight: 500;
   }
 
+  .media-h1-h2-box {
+    margin-top: 0;
+  }
 }
 
 /* @media (prefers-color-scheme: dark) and (max-width: 1333px){
